--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
         <div class="logo">
           <img
             id="header-img"
-            src="/Blue Sunset.png"
+            src="/img/Blue Sunset.png"
             alt="Loja BlueSunset"
           />
         </div>
@@ -42,7 +42,7 @@
         <section id="feacture">
           <div class="grid">
             <div class="icon">
-              <img src="/fogo.png" alt="Caractéristicas" />
+              <img src="/img/fogo.png" alt="Caractéristicas" />
             </div>
             <div class="desc">
               <h2>Materiais Premium</h2>
@@ -52,7 +52,7 @@
 
           <div class="grid">
             <div class="icon">
-              <img src="/transportepng.png" alt="Envio" />
+              <img src="/img/transportepng.png" alt="Envio" />
             </div>
             <div class="desc">
               <h2>Envio rápido</h2>
@@ -62,7 +62,7 @@
 
           <div class="grid">
             <div class="icon">
-              <img src="/bateria.png" alt="Garantia" />
+              <img src="/img/bateria.png" alt="Garantia" />
             </div>
             <div class="desc">
               <h2>Garantia de qualidade</h2>
