--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
         <nav id="nav-bar">
           <ul>
             <li><a class="nav-link" href="#feacture">Caractéristicas</a></li>
-            <li><a class="nav-link" href="#How-it-works">Como funciona</a></li>
+            <li><a class="nav-link" href="#How-it-works">Informações</a></li>
             <li><a class="nav-link" href="#pricing">Princípio</a></li>
           </ul>
         </nav>
